src/styles/style.css
/* ... */
.secondary-button:active {
  color: var(--color-primary-2);
  border-color: var(--color-primary-2);
}
.primary-cta-button:active {
  color: var(--color-primary-1);
  border-color: var(--color-primary-1);
}
.secondary-cta-button:active {
  border-color: var(--color-neutral-2);
}
.footer-social-media-icon:active path {
  fill: var(--color-primary-2);
}

/* Mobile UI */
@media (max-width: 576px) {
  /* Defaults */
  .section-header > * {
    max-width: 80%;
  }
  .section-header > p {
    max-width: 80%;
  }
  h1,
  h2,
  p {
    text-align: center;
    align-self: center;
  }
  html {
    font-size: 12px;
  }
  #root {
    --paragraph-font-size: 1.2rem;
    --heading-font-size: 2rem;
    --y-section-padding: 10vh;
  }
  /*  */
  .header {
    padding-top: 5vh;
    padding-bottom: 5vh;
  }
  .nav-links-cta-container > nav,
  .nav-links-cta-container > button {
    display: none;
  }
  .section-hero {
    flex-direction: column-reverse;
    gap: 2rem;
  }
  .section-hero-illustration-wrapper {
    height: 10vh;
    width: 100%;
    padding: 0 2rem;
  }
  .section-hero-illustration-wrapper::before {
    height: 12rem;
    width: 80vw;
  }
  .section-hero-illustration {
    width: 100%;
  }
  .section-hero-content {
    padding: 0 var(--x-padding);
  }
  .section-hero-content > h1 {
    font-size: 2.6rem;
  }
  .section-hero-cta-buttons > .button {
    flex: 1;
  }
  .features-tab-switcher-container {
    flex-direction: column;
  }
  .features-tab-switcher-button-wrapper {
    width: 80%;
    border-bottom: 0.15rem solid var(--color-neutral-1);
  }
  .features-tab-switcher-button-wrapper:first-child {
    border-top: 0.15rem solid var(--color-neutral-1);
  }
  .features-tab-switcher-button {
    width: 100%;
  }
  .features-tab-switcher-button-text {
    font-size: 1.4rem;
  }
  .section-features-tabs-container {
    gap: unset;
  }
  .features-tab {
    flex-direction: column;
  }
  .features-tab-illustration-wrapper {
    width: 100%;
    padding: 0 2rem;
  }
  .features-tab-illustration {
    height: 20rem;
  }
  .features-tabs-wrapper::before {
    height: 15rem;
    width: 80vw;
  }
  .features-tab-content {
    width: 100%;
    align-items: center;
    justify-content: flex-start;
    padding-bottom: var(--y-section-padding);
  }
  .primary-button {
    display: none;
  }
  .section-download-extension-cards-container {
    flex-direction: column;
  }
  .extension-card {
    width: 80%;
    height: fit-content;
    gap: 1.8rem;
    padding: 2rem;
  }
  .extension-card .primary-cta-button {
    width: 100%;
  }
  .extension-card > .extension-card-minimum-version {
    font-size: 1rem;
  }
  .faq-accordions-container {
    width: 80%;
  }
  .faq-accordion-content {
    text-align: start;
  }
  .section-contact > h2 {
    max-width: 80%;
  }
  .contact-us-container {
    flex-direction: column;
  }
  .contact-us-container > .email-input-wrapper > .input-wrapper > input,
  .contact-us-container > .secondary-button {
    width: 100%;
  }
  footer,
  .logo-nav-links-container,
  .nav-links-container {
    flex-direction: column;
  }
  .social-media-links-container {
    margin-top: 3rem;
  }
}

